classDiagram

    class User {
        +int Id
        +string Username
        +string Email
        +string PasswordHash
        +string PasswordSalt
        +decimal WeightKg
        +int HeightCm
        +int Age
        +decimal TargetWeightKg
        +string GoalPhase
        +string Sex
        +decimal ActivityMultiplier
        +bool OnboardingCompleted
    }

    class IUserRepository {
        <<interface>>
        +GetByIdAsync(id) User
        +GetByUsernameOrEmailAsync(val) User
        +GetByUsernameAsync(username) User
        +GetByEmailAsync(email) User
        +CreateAsync(model, hash, salt)
        +UpdateProfileAsync(userId, model)
    }

    class IMealRepository {
        <<interface>>
        +GetMealsForTodayAsync(userId) List
        +GetTotalCaloriesForTodayAsync(userId) int
        +GetMealCountForTodayAsync() int
        +AddMealAsync(userId, model)
        +DeleteMealAsync(mealId, userId)
        +GetMealByIdAsync(mealId) Meal
    }

    class IMealTemplateRepository {
        <<interface>>
        +GetSavedMealsAsync() List
    }

    class PasswordService {
        -int SaltSize = 16
        -int HashSize = 32
        -int Iterations = 100000
        +HashPassword(hash, salt) string
        +VerifyPassword(pw, hash, salt) bool
    }

    class CalorieCalculatorService {
        +CalculateDailyCalories(user) int
    }

    class AuthenticationService {
        -IUserRepository _userRepository
        -PasswordService _passwordService
        +LoginAsync(model) User?
        +RegisterAsync(model) tuple
    }

    class DashboardService {
        -IUserRepository _userRepository
        -IMealRepository _mealRepository
        -CalorieCalculatorService _calorieCalc
        +GetDashboardAsync(userId) DashboardViewModel?
    }

    class MealsPageService {
        -IUserRepository _userRepository
        -IMealRepository _mealRepository
        +GetMealsIndexAsync(userId) MealsIndexViewModel?
    }

    class MealTemplateService {
        -IMealTemplateRepository _repo
        +GetSavedMealsAsync() List
    }

    class ProfileService {
        -IUserRepository _userRepository
        +GetProfileAsync(userId) ProfileViewModel
        +UpdateProfileAsync(userId, model)
    }

    %% uses interface (gestippeld)
    AuthenticationService ..> IUserRepository
    DashboardService ..> IUserRepository
    DashboardService ..> IMealRepository
    MealsPageService ..> IUserRepository
    MealsPageService ..> IMealRepository
    ProfileService ..> IUserRepository
    MealTemplateService ..> IMealTemplateRepository

    %% uses direct (vol)
    AuthenticationService --> PasswordService
    DashboardService --> CalorieCalculatorService
